--- a/public/src/index.html
+++ b/public/src/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html ng-app="asch">
+<html ng-app="jdcn">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Asch</title>
+    <title>Jdcn</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=10, minimum-scale=0.1">
     <meta content="telephone=no" name="format-detection" />
@@ -104,7 +104,7 @@
 <script type="text/javascript" src="/filter/typeFilter.js"></script>
 <script type="text/javascript" src="/filter/feeFilter.js"></script>
 <script type="text/javascript" src="/filter/histroyFilter.js"></script>
-<script type="text/javascript" src="/filter/xasFilter.js"></script>
+<script type="text/javascript" src="/filter/jdcnFilter.js"></script>
 <!-- <script type="text/javascript" src="/filter/appBalancesFilter.js"></script> -->
 <script type="text/javascript" src="/filter/unitFilter.js"></script>
 <script type="text/javascript" src="/partials/tips/tips.js"></script>
