--- a/public/src/index.html
+++ b/public/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="jdcn">
+<html ng-app="serc">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
